Elastic: Small alignment fix

--- a/skins/elastic/styles/widgets/common.less
+++ b/skins/elastic/styles/widgets/common.less
@@ -373,6 +373,7 @@ fieldset.image-attachment {
     & > .footer {
         height: 3.5rem;
         border-top: 1px solid @color-table-border;
+        text-align: left;
 
         a.button {
             padding: 0;
